--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "react-app-seed",
   "version": "0.1.0",
-  "private": true,
+  "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
