--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
     }
   },
   "rules": {
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "no-unused-vars": "warn"
   }
 }
