Movida URL de la api a variable de entorno

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,9 @@
       "version": "detect"
     }
   },
+  "globals": {
+    "process": "readonly"
+  },
   "rules": {
     "react/react-in-jsx-scope": "off",
     "no-unused-vars": "warn"
