--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "eject": "react-scripts eject",
     "lint": "run-p lint:*",
     "lint:eslint": "eslint --fix ./src",
-    "lint:prettier": "prettier --write ./src"
+    "lint:prettier": "prettier --write ./src",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": [
@@ -46,10 +48,17 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^6.1.14",
+    "@storybook/addon-essentials": "^6.1.14",
+    "@storybook/addon-links": "^6.1.14",
+    "@storybook/node-logger": "^6.1.14",
+    "@storybook/preset-create-react-app": "^3.1.5",
+    "@storybook/react": "^6.1.14",
     "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "storybook-react-router": "^1.0.8"
   },
   "husky": {
     "hooks": {
